tests/parsing/smtlib/v2.6/errors/068_declare-fun_sort_list_unopened_1.expected
File "tests/parsing/smtlib/v2.6/errors/068_declare-fun_sort_list_unopened_1.smt2", line 2, character 17-18:
2 | (declare-fun foo _)
                     ^
Error while parsing a function declaration, read the reserved word '_',
      but expected an opening parenthesis to start the list of sorts for the
      function's arguments.
